--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <title>Azuki</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="color-scheme" content="dark">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <script src="https://kit.fontawesome.com/7ee581519c.js" crossorigin="anonymous"></script>
 </head>
